[gd_scene load_steps=5 format=3 uid="uid://bgq5ou8sx51tv"]

[ext_resource type="Script" uid="uid://c5162jpqw0k0e" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://hetob7ua2ety" path="res://scripts/options.gd" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://duwqy4utuni6s" path="res://assets/fa.png" id="2_ekxnf"]
[ext_resource type="Script" uid="uid://dbnay3eimsfl1" path="res://scripts/main.gd" id="2_wu84c"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("main", "options")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_l6cm7")
game_scene = "uid://stbi58t5etjk"
main = NodePath("VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main")
options = NodePath("VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.8, 0.5647059, 0.38039216, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 90
text = "The Device"
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Main" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_wu84c")

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.59955007, 0.9999998, 0.26008812, 1)
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main"]
layout_mode = 2
size_flags_vertical = 3

[node name="Options" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0.41978207, 0.41978207, 0.41978207, 1)
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.8745098, 0, 0, 1)
text = "Exit game"

[node name="Options" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_bqqt6")

[node name="VolumeText" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="ToggleFullscreen" type="CheckButton" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Toggle Fullscreen"
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Back"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ekxnf")
expand_mode = 1
stretch_mode = 3

[node name="Info" type="BoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamName" type="Label" parent="VBoxContainer/Info"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Boba Gang"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionNo" type="Label" parent="VBoxContainer/Info"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "ver.:   pre-alpha"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main/Start" to="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main" method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main/HBoxContainer/Options" to="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main" method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main/HBoxContainer/Exit" to="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Main" method="_on_exit_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options/VolumeSlider" to="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options" method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options/ToggleFullscreen" to="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options" method="_on_toggle_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options/Back" to="VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/BoxContainer/Options" method="_on_back_pressed"]
